Our first tests.  yay